# modeling_projects

./: .directory  .gitignore  .gitignore.orig  CMakeLists.txt  Makefile  README.md  model_parallel.sln  model_parallel.vcxproj  model_parallel.vcxproj.filters  prod.cpp
include/: FixedSizeMeshContainer.hpp  IO.hpp  Sparse.hpp  VariableSizeMeshContainer.hpp  decomposition.hpp  nodeType.hpp  parallel.hpp  platformDependencies.hpp  solver.hpp  solverInfo.hpp  stdafx.hpp  toposBuild.hpp  vmo.hpp  vtkGenerator.hpp
meshbuilder/: FixedSizeMeshContainer.hpp  IO.hpp  Makefile  Sparse.hpp  VariableSizeMeshContainer.hpp  decision.txt  decomposition.hpp  extra.hpp  modelling.vcxproj  modelling.vcxproj.filters  platformDependencies.hpp  prod  prod.cpp  solver.hpp  test  toposBuild.hpp  vmo.hpp  vtkGenerator.hpp
src/: IO.cpp  decomposition.cpp  main.cpp  parallel.cpp  parallel_test.cpp  prod.cpp  solver.cpp  toposBuild.cpp  topos_build.cpp  vmo.cpp
vsstudio/: modelling.sln  modelling.vcxproj  modelling.vcxproj.filters
